--- a/src/BPattern.ProductManager.Infra/BPattern.ProductManager.Infra.csproj
+++ b/src/BPattern.ProductManager.Infra/BPattern.ProductManager.Infra.csproj
@@ -60,6 +60,9 @@
       <DependentUpon>202203030006486_enderec.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\Migrations\Configuration.cs" />
+    <Compile Include="Data\Repository\EnderecoRepository.cs" />
+    <Compile Include="Data\Repository\FornecedorRepository.cs" />
+    <Compile Include="Data\Repository\ProdutoRepository.cs" />
     <Compile Include="Data\Repository\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
